{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 84,
  "lineage": "996d84ce-ec12-fa90-2c69-e52b99234223",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:684288783179:loadbalancer/app/ecs-load-balancer/835b4c5173a4c7c6",
            "arn_suffix": "app/ecs-load-balancer/835b4c5173a4c7c6",
            "dns_name": "ecs-load-balancer-1478987943.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:684288783179:loadbalancer/app/ecs-load-balancer/835b4c5173a4c7c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-02e8f7cabb0929187"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0032866531e3295b0"
              },
              {
                "subnet_id": "subnet-08fe39a5c30f51478"
              }
            ],
            "subnets": [
              "subnet-0032866531e3295b0",
              "subnet-08fe39a5c30f51478"
            ],
            "vpc_id": "vpc-0edc4b947d43202ee",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.spliceSreTakehome",
            "aws_subnet.spliceSreTakehome_1",
            "aws_subnet.spliceSreTakehome_2",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:684288783179:listener/app/ecs-load-balancer/835b4c5173a4c7c6/b8bcb33d770215bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:684288783179:targetgroup/ecs-target-group/5cc06e72c844ab2a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:684288783179:listener/app/ecs-load-balancer/835b4c5173a4c7c6/b8bcb33d770215bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:684288783179:loadbalancer/app/ecs-load-balancer/835b4c5173a4c7c6",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_alb_target_group.ecs-target-group",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:684288783179:targetgroup/ecs-target-group/5cc06e72c844ab2a",
            "arn_suffix": "targetgroup/ecs-target-group/5cc06e72c844ab2a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:684288783179:targetgroup/ecs-target-group/5cc06e72c844ab2a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "spliceSreTakehome",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0250278c9cb478362",
            "owner_id": "684288783179",
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spliceSreTakehome_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be6785fa82902594",
            "owner_id": "684288783179",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0250278c9cb478362",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_internet_gateway.spliceSreTakehome",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spliceSreTakehome_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dcffb0835bc0c2bc",
            "owner_id": "684288783179",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0250278c9cb478362",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_internet_gateway.spliceSreTakehome",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spliceSreTakehome_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b12f803f6a693444",
            "route_table_id": "rtb-0be6785fa82902594",
            "subnet_id": "subnet-0032866531e3295b0"
          },
          "dependencies": [
            "aws_route_table.spliceSreTakehome_1",
            "aws_subnet.spliceSreTakehome_1",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spliceSreTakehome_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5aa4c0f46c00dff",
            "route_table_id": "rtb-0dcffb0835bc0c2bc",
            "subnet_id": "subnet-08fe39a5c30f51478"
          },
          "dependencies": [
            "aws_route_table.spliceSreTakehome_2",
            "aws_subnet.spliceSreTakehome_2",
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spliceSreTakehome",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684288783179:security-group/sg-02e8f7cabb0929187",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e8f7cabb0929187",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "spliceSreTakehome_public_sg",
            "name_prefix": null,
            "owner_id": "684288783179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spliceSreTakehome_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684288783179:subnet/subnet-0032866531e3295b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0032866531e3295b0",
            "map_public_ip_on_launch": false,
            "owner_id": "684288783179",
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spliceSreTakehome_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684288783179:subnet/subnet-08fe39a5c30f51478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-08fe39a5c30f51478",
            "map_public_ip_on_launch": false,
            "owner_id": "684288783179",
            "tags": {
              "Type": "spliceSreTakehome"
            },
            "vpc_id": "vpc-0edc4b947d43202ee"
          },
          "dependencies": [
            "aws_vpc.spliceSreTakehome"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spliceSreTakehome",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684288783179:vpc/vpc-0edc4b947d43202ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abf542ea301d1c59",
            "default_route_table_id": "rtb-0195678c5ea6dae04",
            "default_security_group_id": "sg-0990dbaebca6611f6",
            "dhcp_options_id": "dopt-c77bfea2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0edc4b947d43202ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0195678c5ea6dae04",
            "owner_id": "684288783179",
            "tags": {
              "Type": "spliceSreTakehome"
            }
          }
        }
      ]
    }
  ]
}